timing: updated path lookup

--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -6,11 +6,10 @@
    "source": [
     "# Experiments\n",
     "\n",
+    "The following notebook reproduces the data and code used in the manuscript.\n",
+    "\n",
     "Run this with SageMath kernel. You can install it from [here](https://www.sagemath.org).\n",
     "\n",
-    "\n",
-    "\n",
-    "## Install Requirements\n",
     "SageMath kernel may not see your virtual environment. \n",
     "You can install the minimum requirements for executing the timing experiments by executing the following code: "
    ]
@@ -28,14 +27,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Characters:"
+    "## Characters"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### MPS Timing Experiments:\n",
+    "### Timing\n",
+    "\n",
+    "#### MPS \n",
     "\n",
     "Runs the MPS character timing. This generates data to reproduce Fig. 1 in the manuscript.\n",
     "\n",
@@ -55,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### SAGE and GAP timing experiments: \n",
+    "#### SAGE and GAP\n",
     "\n",
     "Note that Sage also executes the GAP code in timing_gap.g. "
    ]
@@ -73,7 +74,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Runtime Plot"
+    "### Plotting\n",
+    "\n",
+    "#### Runtime Comparison"
    ]
   },
   {
@@ -89,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Dimension Plot"
+    "#### Bond Dimension"
    ]
   },
   {
@@ -105,9 +108,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Kostka Numbers\n",
+    "## Kostka\n",
     "\n",
-    "### Kostka Timing Experiment\n",
+    "### Timing\n",
+    "\n",
+    "#### MPS\n",
     "\n",
     "Kostka number MPS algorithm timing experiment. Note: this takes about an hour on a M1 Mac with 64GB RAM."
    ]
@@ -125,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Kostka Plots"
+    "### Plotting"
    ]
   },
   {
@@ -136,13 +141,6 @@
    "source": [
     "%run ./plotting/make_plot_kostka.py"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
