--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -149,25 +149,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,61 +176,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(1.)"
+       "1"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bldr = CharacterBuilder((2,1))\n",
-    "bldr.get_character((3,))"
+    "import numpy as np\n",
+    "bldr = CharacterBuilder(Mu = (1,1,1)) # TODO: check\n",
+    "bldr.get_character((1,1,1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from character_building.character_builder_quimb import CharacterBuilder"
+    "from character_building.kostka_builder import KostkaBuilder"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bldr = CharacterBuilder((2,1))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.0"
+       "1"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "bldr.get_character((2,1))"
+    "bldr = KostkaBuilder((2,1))\n",
+    "bldr.get_kostka((2,1))"
    ]
   },
   {
